[gd_scene format=3 uid="uid://dpcq2xxky5mnf"]

[ext_resource type="Script" uid="uid://cft78g3f15mdg" path="res://Interactables/thrown_food.gd" id="1_fyf5m"]
[ext_resource type="PackedScene" uid="uid://donnq44vo7rv2" path="res://sliceBread.fbx" id="2_0sc3s"]

[sub_resource type="BoxShape3D" id="BoxShape3D_8cbe5"]

[sub_resource type="SphereShape3D" id="SphereShape3D_0sc3s"]

[node name="ThrownFood" type="RigidBody3D" unique_id=101873407 groups=["thrown food"]]
script = ExtResource("1_fyf5m")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=31973205]
shape = SubResource("BoxShape3D_8cbe5")

[node name="sliceBread" parent="." unique_id=2106520491 instance=ExtResource("2_0sc3s")]

[node name="sliceBread" parent="sliceBread" index="0" unique_id=1245093885]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="Area3D" type="Area3D" parent="." unique_id=1079673186]
transform = Transform3D(2.765, 0, 0, 0, 2.765, 0, 0, 0, 2.765, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D" unique_id=213450862]
shape = SubResource("SphereShape3D_0sc3s")

[node name="Timer" type="Timer" parent="." unique_id=428693126]
wait_time = 3.0
one_shot = true

[connection signal="interacted" from="." to="." method="_on_interacted"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]

[editable path="sliceBread"]
